--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portifolio",
-  "homepage": "https://danreby.github.io/danreby-portifolio/",
+  "homepage": "https://danreby.github.io/one-history/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
