Consertando erro no botão

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portifolio",
+  "name": "one-history",
   "homepage": "https://danreby.github.io/one-history/",
   "private": true,
   "version": "0.0.0",
